apps/ingress/ingress.aks.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whack-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: game
          servicePort: 8080
        path: /(.*)
      - backend:
          serviceName: admin
          servicePort: 8080
        path: /admin/(.*)
      - backend:
          serviceName: api
          servicePort: 8080
        path: /api/(.*)
